correctly linked to assn
linked to assignment

--- a/Homework/Stylesheets/all.css
+++ b/Homework/Stylesheets/all.css
@@ -1,6 +1,6 @@
 html {
   background-color: #EEEDEC;
-  background-image: url("../background.png");
+  background-image: url(images/background.png);
   font-family: "Lucida Grande", sans-serif;
 }
 body {
