--- a/Final Project/finalCSS.css
+++ b/Final Project/finalCSS.css
@@ -1,4 +1,4 @@
-html {
+/*html {
   background-color: white;
 }
 
@@ -11,9 +11,10 @@ header {
   text-align: right;
   margin-top: 0px;
   position: fixed;
-  background-color: white;
+  background-color: #e7a45d;
 }
 #nav li {
+  text-align: right;
   display: inline-block;
   padding: 10px 10px 10px 10px;
 }
@@ -23,18 +24,21 @@ header {
   text-align: center;
   color:  yellow;
   text-decoration: none;
-}
+}*/
 
 body {
-  background-image: url(file:///Users/KristinOh/GitHub/FEWD-30/Final%20Project/yellowombre.jpeg);
-  background-position: center;
+  background-image: url(file:///Users/KristinOh/GitHub/FEWD-30/Final%20Project/grass_tree_sky_light_summer-landscape.jpg);
+  background-size: cover;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
-
+/*
 main {
   background-color: #e7a45d;
   padding:20px;
   max-width: max;
-  margin: 10px;
+  margin: 10px;*/
 }
 
 h1 {
