--- a/FinalProject/finalmobile.css
+++ b/FinalProject/finalmobile.css
@@ -1,3 +1,27 @@
 html {
-  background: black;
+  margin: 0px;
+}
+header {
+  text-align: center;
+}
+header nav {
+  position: static;
+  display: none;
+}
+header nav li {
+  display: block;
+}
+header nav a {
+  color: white;
+  text-decoration: none;
+}
+
+main {
+  padding: 15px;
+  font-size: 14px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  border: 1px solid #C7C7C7;
+  border-radius: 9px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
