--- a/FinalProject/finalCSS.css
+++ b/FinalProject/finalCSS.css
@@ -2,7 +2,14 @@
   border: solid;
   color: black;
 }*/
-
+body {
+  margin-top: 50px;
+  background-image: url(grass_tree_sky_light_summer-landscape.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  position: absolute;
+}  
 header {
   margin-top: 0px;
   text-align: right;
