--- a/FinalProject/finalCSS.css
+++ b/FinalProject/finalCSS.css
@@ -9,7 +9,7 @@ body {
   background-attachment: fixed;
   background-position: center;
   position: absolute;
-}  
+}
 header {
   margin-top: 0px;
   text-align: right;
@@ -31,16 +31,6 @@ header {
   text-decoration: none;
 }
 
-
-body {
-  margin-top: 50px;
-  background-image: url(grass_tree_sky_light_summer-landscape.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  position: absolute;
-}
-
 main {
   background-color: white;
   padding: 10px 10px 10px 10px;
@@ -49,13 +39,17 @@ main {
   border-style: solid;
   border-width: 1px;
   border-color: gold;
-  opacity: 0.4;
+  opacity: 0.5;
 
   max-width: 800px;
   margin: 0px 200px;
 
 }
 
+p #ontop {
+  position: relative;
+  top: 10px;
+}
 
 h1{
   margin: 0px auto;
