making text content solid and background opaque
making text content solid and background opaque

--- a/FinalProject/finalCSS.css
+++ b/FinalProject/finalCSS.css
@@ -7,7 +7,7 @@ body {
   background-image: url(grass_tree_sky_light_summer-landscape.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
+  background-position: right;
   position: absolute;
 }
 /*
