--- a/FinalProject/finalCSS.css
+++ b/FinalProject/finalCSS.css
@@ -7,7 +7,7 @@ body {
   background-image: url(grass_tree_sky_light_summer-landscape.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: right;
+  background-position: center;
   position: absolute;
 }
 /*
@@ -67,18 +67,14 @@ main {
   border-style: solid;
   border-width: 1px;
   border-color: gold;
-  opacity: .4;
+  opacity: .6;
 
   max-width: 800px;
   margin: 0px 200px;
 }
 
 #textcontent {
-  background: none repeat scroll 0 0 #FFFFFF;
-  color: #26265F;
-  font-size: 14px;
-  line-height: 24px;
-  opacity: 1;
+  opacity: none;
 }
 
 p #ontop {
