--- a/FinalProject/finalCSS.css
+++ b/FinalProject/finalCSS.css
@@ -60,22 +60,26 @@ header {
 }
 
 main {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6);
   padding: 10px 10px 10px 10px;
   border-radius: 10px;
   box-shadow: 0px 0px 30px slategrey;
   border-style: solid;
   border-width: 1px;
   border-color: gold;
-  opacity: .6;
+  opacity: 1;
 
   max-width: 800px;
   margin: 0px 200px;
 }
 
-#textcontent {
-  opacity: none;
-}
+/*#textcontent {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}*/
 
 p #ontop {
   position: relative;
