--- a/FinalProject/finalCSS.css
+++ b/FinalProject/finalCSS.css
@@ -72,7 +72,7 @@ main {
   border-color: gold;
   opacity: 1;
 
-  max-width: relative;
+  width: 800px;
   min-width: 300px;
   height: relative;
   min-height: 425px;
@@ -124,4 +124,8 @@ label {
   height: 200px;
   float: left;
   margin: 0px 20px 20px 3px;
+}
+
+iframe {
+  align: center;
 }
