--- a/FinalProject/finalmobile.css
+++ b/FinalProject/finalmobile.css
@@ -25,3 +25,13 @@ main {
   border-radius: 9px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
+
+body {
+  margin-top: 50px;
+  background-image: url(grass_tree_sky_light_summer-landscape.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  position: absolute;
+  height: 100%
+}
