--- a/FinalProject/finalCSS.css
+++ b/FinalProject/finalCSS.css
@@ -9,7 +9,8 @@ body {
   background-attachment: fixed;
   background-position: center;
   position: absolute;
-  height: 100%
+  max-height: 100%;
+  max-width: 100%;
 }
 /*
 header {
